--- a/css/style1.css
+++ b/css/style1.css
@@ -169,6 +169,8 @@ button {
   .wrap-login100-form-btn:hover .login100-form-bgbtn {
 	left: 0;
   }
-  
-  
-  
+   
+  .rq {
+	color: #FF0000;
+	font-size: 10pt;
+	}
