--- a/css/styles.css
+++ b/css/styles.css
@@ -97,9 +97,9 @@ body {
 	font-weight: 100;
 	font-style: italic;
 }
-img {
+/* img {
   border-radius: 50%;
-}
+} */
 
 hr {
   margin: 1rem 0;
@@ -11368,4 +11368,87 @@ li
   
   background: linear-gradient(-45deg, #135678, #101214, #ffc107, #d1d2d4);
 
+}
+
+
+
+
+
+@import url(https://fonts.googleapis.com/css?family=Montserrat);
+
+.container {
+  display: flex;
+/*   border:1px solid red; */
+  height: 30%;
+  align-items: center;
+}
+
+svg {
+    display: block;
+    font: 10.5em 'Montserrat';
+    width: 215px;
+    height: 300px;
+    margin: 0 auto;
+}
+
+.text-copy {
+    fill: none;
+    stroke: white;
+    stroke-dasharray: 6% 29%;
+    stroke-width: 5px;
+    stroke-dashoffset: 0%;
+    animation: stroke-offset 5.5s infinite linear;
+}
+
+.text-copy:nth-child(1){
+	stroke: #4D163D;
+	animation-delay: -1;
+}
+
+.text-copy:nth-child(2){
+	stroke: #840037;
+	animation-delay: -2s;
+}
+
+.text-copy:nth-child(3){
+	stroke: #BD0034;
+	animation-delay: -3s;
+}
+
+.text-copy:nth-child(4){
+	stroke: #BD0034;
+	animation-delay: -4s;
+}
+
+.text-copy:nth-child(5){
+	stroke: #FDB731;
+	animation-delay: -5s;
+}
+
+@keyframes stroke-offset{
+	100% {stroke-dashoffset: -35%;}
+}
+
+
+/* image gallery */
+div.gallery {
+  margin: 5px;
+  border: 2px solid #ccc;
+  float: left;
+  width: 350px;
+}
+
+div.gallery:hover {
+  border: 1px solid #777;
+}
+
+div.gallery img {
+  width: 100%;
+  height: 300px;
+}
+
+div.desc {
+  padding: 15px;
+  text-align: center;
+  
 }
